syntax = "proto3";

package syft.core.adp;
import "proto/core/adp/entity.proto";
import "proto/lib/numpy/array.proto";
import "proto/core/adp/scalar_manager.proto";
import "proto/core/tensor/share_tensor.proto";

message SingleEntityPhiTensor {
  oneof child {
    syft.core.tensor.ShareTensor tensor = 1;
    syft.lib.numpy.NumpyProto array = 2;
  }
  syft.lib.numpy.NumpyProto min_vals = 3;
  syft.lib.numpy.NumpyProto max_vals = 4;
  syft.core.adp.Entity entity = 5;
  VirtualMachinePrivateScalarManager scalar_manager = 6;
}


message RowEntityPhiTensor {
  repeated SingleEntityPhiTensor rows = 1;
  repeated syft.core.adp.Entity unique_entities = 2;
  repeated VirtualMachinePrivateScalarManager unique_scalar_managers = 3;
  syft.lib.numpy.NumpyProto row_entity_index = 4;
  syft.lib.numpy.NumpyProto row_scalar_manager_index = 5;
}
